--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -18,6 +18,7 @@
     height: 38px;
     padding: 3px 16px 6px 16px;
     font-size: 16px;
+    max-width: 75%;
 }
 
 #searchButton {
